# trailarr

./: .coveragerc  .dockerignore  .env  .gitignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile1  README.md  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh  hooks.py  index.html  install.ps1  install.sh  install_ffmpeg.sh  mkdocs.yml  old_Dockerfile  requirements.txt  restart_stack.py  search.json  sitemap.xml  start.sh  task_instructions.md  uninstall.sh
backend/: .coveragerc  .env  alembic.ini  app_logger.py  exceptions.py  export_openapi.py  logger.py  main.py  oldalembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  README.md  env.py  model_conventions.py  script.py.mako
backend/alembic/versions/: 20240514_1933-e18c27163b6e_initial.py  20240515_2108-325a4fb01c20_initialdev.py  20240813_1709-34f937f1d7b9_movie_and_series_to_media.py  20240917_1327-1cc1dd5dbe9f_add_media_status.py  20250209_0142-4b942197af6a_extra_options_in_media.py  20250210_1941-7afc45b440f8_add_tables_for_filter_and_trailerprofile.py  20250217_1144-1c5ac69def9a_add_customfilter.py  20250502_0642-656a0b9cbe50_trailerprofile_implementation.py  20250616_0129-8c9a39658afa_add_priority_to_trailerprofile.py  20250616_1908-6265228864f0_add_yt_dlp_extra_options.py  20250625_0205-f030a0fdc9d8_add_season_count_to_media.py  20250711_0304-9606084facbe_delete_orphan_relations.py  20250718_0716-178c6a8ea923_add_download_model.py  20250718_0735-19d5fca9612f_add_download_model.py  20251017_0603-f59986f4b718_add_new_fields_to_trailerprofile.py  20251031_1515-b213e0443c1b_remove_is_trailer_from_profiles.py  20251106_2114-19d5fca9612f_add_download_model.py  20251109_1928-a9320c7ab1a3_add_download_model.py  20251212_1826-ba9a193d6e0e_add_external_url_to_connection.py  20251228_2336-219bdc0e3cc9_add_files_tracking.py  20260407_0000-b3d2f1a4c8e9_add_scheduled_task_config.py  20260419_1607-443c82079368_add_skip_if_plex_trailer_resolution_to_.py  20260507_0356-e3a59c94c6dc_add_plex_section_key_to_pathmapping.py  20260511_0000-f1a2b3c4d5e6_add_uploader_ids_to_trailerprofile.py  20260514_0000-a1b2c3d4e5f6_add_mediatrailerstatus_issue_trailerprofile_fields.py  20260523_0000-d4e5f6a7b8c9_add_tmdb_language_and_youtube_id.py  20260601_0000-e5f6a7b8c9d0_add_videoid_table_and_attempt_count.py  20260601_0001-f6a7b8c9d0e1_replace_txdb_id_with_tmdb_tvdb.py  20260613_1842-a1b2c3d4e5f6_add_tmdb_tvdb_id_to_media.py
backend/api/: utils.py
backend/api/v1/: auth.py  authentication.py  connections.py  customfilters.py  deps.py  files.py  issues.py  logs.py  media.py  models.py  movies.py  plex.py  routes.py  search.py  series.py  settings.py  tasks.py  token.py  trailerprofiles.py  websockets.py  ws_endpoint.py
backend/config/: app_logger_opts.py  config.py  logger_config.json  logging_context.py  settings.py  timing_middleware.py
backend/config/logs/: db_handler.py  db_utils.py  manager.py  model.py
backend/core/: arr_data_parser.py  connection_manager.py  files_handler.py
backend/core/base/: connection_manager.py
backend/core/connection_manager/: connection_manager.py  radarr.py  sonarr.py
backend/db/: engine.py  init_db.py
backend/download/: analysis.py  cli.py  conversion.py  filename.py  image.py  pipeline.py  search.py  utils.py  video.py
backend/frontend/: __init__.py  middleware.py  router.py  utils.py
backend/migrations/: env.py
backend/services/: arr_connection_manager.py  cleanup_service.py  connection_service.py  event_service.py  files_service.py  image_service.py  issue_service.py  media_service.py  plex_service.py  scan_service.py  tmdb_service.py  trailer_profile_service.py
backend/tasks/: api_refresh.py  cleanup.py  files_scan.py  image_refresh.py  plex_refresh.py  scheduler.py  schedules.py  tmdb_refresh.py
backend/tests/: conftest.py  test_main.py
backend/utils/: docker_check.py  filters.py  media_scanner.py  path_utils.py
backend/web/: routes.py
backend/ws/: manager.py
(+2322 files in other folders)
