[project]
name = "Trailarr"
version = "0.6.3"
description = "Trailarr is a Docker application to download and manage trailers for your Radarr and Sonarr libraries."
readme = "../README.md"
requires-python = ">=3.13.5"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.3",
    "aiosqlite==0.22.1",
    "alembic==1.17.2",
    "apscheduler==3.11.2",
    "async-lru==2.0.5",
    "bcrypt==5.0.0",
    "fastapi[standard-no-fastapi-cloud-cli]==0.128.0",
    "pillow==12.1.0",
    "pytz>=2025.2",
    "sqlmodel==0.0.31",
    "yt-dlp[curl-cffi,default]==2025.12.8",
]

[dependency-groups]
dev = [
    "aioresponses==0.7.8",
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-github-changelog==0.1.0",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-material==9.7.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
docs = [
    "mkdocs-git-revision-date-localized-plugin==1.5.0",
    "mkdocs-glightbox==0.5.2",
    "mkdocs-material==9.7.1",
]
testing = [
    "aioresponses==0.7.8",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]

[tool.pytest.ini_options]
addopts = "--rootdir=backend --cov=backend --cov-report=xml --cov-report=term"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
