[project]
name = "Trailarr"
version = "0.9.6"
description = "Trailarr is a Docker application to download and manage trailers for your Radarr and Sonarr libraries."
readme = "../README.md"
requires-python = ">=3.13.5"
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.5",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "async-lru==2.3.0",
    "bcrypt==5.0.0",
    "fastapi[standard-no-fastapi-cloud-cli]==0.136.3",
    "pillow==12.2.0",
    "quiv>=0.4.0",
    "sqlmodel==0.0.38",
    "yt-dlp[curl-cffi,default]==2026.3.17",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "aioresponses==0.7.8",
    "mkdocs-git-revision-date-localized-plugin==1.5.3",
    "mkdocs-github-changelog==0.1.0",
    "mkdocs-glightbox==0.5.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "zensical==0.0.43",
]
docs = [
    "mkdocs-git-revision-date-localized-plugin==1.5.3",
    "mkdocs-glightbox==0.5.2",
    "zensical==0.0.43",
]
testing = [
    "aioresponses==0.7.8",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["."]
relative_files = true
omit = [
    "*/__pycache__/*",
    "*/__init__.py",
    "tests/*",
    "export_openapi.py",
]

